tests/rosetta/out/Rust/angle-difference-between-two-bearings-1.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn angleDiff(b1: f64, b2: f64) -> f64 {
        let d = b2 - b1;
        if ((d < 0 as f64 as f64) as f64) - 180.0 {
            return d + 360.0;
        }
        if d > 180.0 {
            return d - 360.0;
        }
        return d;
    }
    let mut testCases = vec![vec![20.0, 45.0], vec![((0 as f64) as f64) - 45.0, 45.0], vec![((0 as f64) as f64) - 85.0, 90.0], vec![((0 as f64) as f64) - 95.0, 90.0], vec![((0 as f64) as f64) - 45.0, 125.0], vec![((0 as f64) as f64) - 45.0, 145.0], vec![29.4803, ((0 as f64) as f64) - 88.6381], vec![((0 as f64) as f64) - 78.3251, ((0 as f64) as f64) - 159.036]];
    for tc in testCases {
        println!("{}", vec![format!("{}", angleDiff(tc[0], tc[1]))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
}
